--- a/src/main/resources/templates/appointments.html
+++ b/src/main/resources/templates/appointments.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/layout}">
+
 <head>
-    <meta charset="utf-8">
-    <title>À POINT - Mes rendez-vous</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/assets/stylesheets/login.css}">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Mes rendez-vous</title>
 </head>
 
 <body>
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-12">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1>Mes <span th:text="${sectorLabels.getAppointmentPluralLabel(user.sector)}">rendez-vous</span> - <span th:text="${user.companyName}">Entreprise</span></h1>
-                <div>
-                    <a href="/rendez-vous/nouveau" class="btn btn-primary" th:text="${sectorLabels.getNewAppointmentButtonLabel(user.sector)}">Nouveau rendez-vous</a>
-                    <a href="/logout" class="btn btn-outline-secondary ms-2">Déconnexion</a>
+    <layout:layout title="Mes rendez-vous">
+
+        <div class="row mb-4">
+            <div class="col-12">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h1 class="mb-1">
+                            <i class="bi bi-calendar-event me-2 text-primary"></i>
+                            Mes <span th:text="${sectorLabels.getAppointmentPluralLabel(user.sector)}">rendez-vous</span>
+                        </h1>
+                        <p class="text-muted mb-0" th:text="'Bienvenue, ' + ${user.companyName}">Entreprise</p>
+                    </div>
+                    <div>
+                        <a href="/rendez-vous/nouveau" class="btn btn-primary btn-lg" th:text="${sectorLabels.getNewAppointmentButtonLabel(user.sector)}">
+                            <i class="bi bi-plus-circle me-2"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
+        </div>
 
             <!-- Messages d'alerte -->
             <div th:if="${success}" class="alert alert-success alert-dismissible fade show" role="alert">
@@ -145,9 +148,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    </layout:layout>
 </body>
 </html>
