--- a/src/main/resources/templates/new-appointment.html
+++ b/src/main/resources/templates/new-appointment.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{fragments/layout}">
+
 <head>
-    <meta charset="utf-8">
-    <title>À POINT - Nouveau rendez-vous</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/assets/stylesheets/login.css}">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Nouveau rendez-vous</title>
 </head>
 
 <body>
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card">
-            <div class="card-header">
-                <h4 th:text="${sectorLabels.getNewAppointmentButtonLabel(user.sector)} + ' - ' + ${user.companyName}">Nouveau rendez-vous - Entreprise</h4>
-            </div>
+    <layout:layout title="Nouveau rendez-vous">
+
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="mb-0">
+                            <i class="bi bi-plus-circle me-2 text-primary"></i>
+                            <span th:text="${sectorLabels.getNewAppointmentButtonLabel(user.sector)} + ' - ' + ${user.companyName}">Nouveau rendez-vous - Entreprise</span>
+                        </h4>
+                    </div>
                 <div class="card-body">
                     <form action="/rendez-vous/nouveau" method="post">
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
@@ -85,7 +82,9 @@ document.addEventListener('DOMContentLoaded', function() {
     const minutes = String(now.getMinutes()).padStart(2, '0');
     const minDateTime = `${year}-${month}-${day}T${hours}:${minutes}`;
     dateInput.min = minDateTime;
-});
-</script>
+    });
+    </script>
+
+    </layout:layout>
 </body>
 </html>
